--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,23 +24,23 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="2"
-            android:text="Rojo: "/>
+            android:text="Rojo: " />
 
         <SeekBar
             android:id="@+id/sbRojo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="6"
-            android:progress="0"
-            android:max="255"/>
+            android:max="255"
+            android:progress="0" />
 
         <TextView
             android:id="@+id/tvRojo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_gravity="center"
-            android:text="0"/>
+            android:layout_weight="1"
+            android:text="0" />
     </LinearLayout>
 
     <LinearLayout
@@ -53,26 +53,26 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="2"
-            android:text="Verde: "/>
+            android:text="Verde: " />
 
         <SeekBar
             android:id="@+id/sbVerde"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="6"
-            android:progress="0"
-            android:max="255"/>
+            android:max="255"
+            android:progress="0" />
 
         <TextView
             android:id="@+id/tvVerde"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_gravity="center"
-            android:text="0"/>
+            android:layout_weight="1"
+            android:text="0" />
     </LinearLayout>
 
-    <LinearLayout
+       <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp">
@@ -101,6 +101,42 @@
             android:text="0"/>
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="2"
+            android:text="Opacidad: "/>
+
+        <SeekBar
+            android:id="@+id/sbT"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="6"
+            android:progress="0"
+            android:max="255"/>
+
+        <TextView
+            android:id="@+id/tvT"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:text="0"/>
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="vertical">
 
     <Button
         android:id="@+id/btnSharedPreferences"
@@ -108,5 +144,23 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Almacenar color"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+    <SurfaceView
+        android:id="@+id/sfvGuardado"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
+
+    <SurfaceView
+        android:id="@+id/sfvActual"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"/>
+        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
