--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:textAlignment="center"
             android:layout_weight="2"
             android:text="Rojo: " />
 
@@ -39,6 +40,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:textAlignment="center"
             android:layout_weight="1"
             android:text="0" />
     </LinearLayout>
@@ -52,6 +54,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:textAlignment="center"
             android:layout_weight="2"
             android:text="Verde: " />
 
@@ -68,6 +71,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:textAlignment="center"
             android:layout_weight="1"
             android:text="0" />
     </LinearLayout>
@@ -81,6 +85,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:textAlignment="center"
             android:layout_weight="2"
             android:text="Azul: "/>
 
@@ -98,6 +103,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_gravity="center"
+            android:textAlignment="center"
             android:text="0"/>
 
     </LinearLayout>
@@ -110,6 +116,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:textAlignment="center"
             android:layout_weight="2"
             android:text="Opacidad: "/>
 
@@ -127,6 +134,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_gravity="center"
+            android:textAlignment="center"
             android:text="0"/>
 
     </LinearLayout>
@@ -149,17 +157,17 @@
             android:layout_height="match_parent"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
-    <SurfaceView
-        android:id="@+id/sfvGuardado"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+                <SurfaceView
+                    android:id="@+id/sfvGuardado"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
 
-    <SurfaceView
-        android:id="@+id/sfvActual"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"/>
+            <SurfaceView
+                    android:id="@+id/sfvActual"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"/>
         </LinearLayout>
     </LinearLayout>
 
